Update javadoc